Routers creados y filtros hechos

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,4 +1,7 @@
-WALLET_PATH=${PWD}/wallet
+WALLET_PATH=C:\Users\josec\OneDrive\Documentos\UMA\3º\Asignaturas\1er cuatrimestre\Extras\Hackaton\Repositorio\Team-Bingo-Malackaton-2025\server\wallet
+# WALLET_PATH=${PWD}/wallet
+# WALLET_PATH=${PWD}/wallet
+# WALLET_PATH=${PWD}/wallet
 WALLET_PASSWORD=e@U4cFlcaN$NOh
 DB_USER=MALACKATHON
 DB_PASSWORD=Oci.2025_v4m0ssss
