--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.8.1",
     "node-fetch": "^3.3.2",
+    "openai": "^6.3.0",
     "oracledb": "^6.9.0"
   },
   "scripts": {
