--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,14 @@
 {
   "name": "mental-health-chat-backend",
+  "version": "1.0.0",
   "type": "module",
+  "description": "Backend chatbot salud mental España",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "node --watch chatbot-terminal.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "cors": "^2.8.5",
@@ -8,14 +16,15 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.8.1",
     "node-fetch": "^3.3.2",
-<<<<<<< HEAD
-=======
     "openai": "^6.3.0",
->>>>>>> develop
     "oracledb": "^6.9.0"
   },
-  "scripts": {
-    "start": "node chat-api.js",
-    "dev": "node --watch chat-api.js"
-  }
+  "keywords": [
+    "chatbot",
+    "salud-mental",
+    "oracle",
+    "openai"
+  ],
+  "author": "Team Bingo",
+  "license": "MIT"
 }
