--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,11 +1,15 @@
 {
-  "functions": {
-    "api/index.py": {
-      "runtime": "python3.11",
-      "includeFiles": "wallet/**"
+  "version": 2,
+  "builds": [
+    {
+      "src": "app.py",
+      "use": "@vercel/python"
     }
-  },
+  ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/api/index.py" }
+    {
+      "src": "(.*)",
+      "dest": "app.py"
+    }
   ]
 }
